--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,7 @@
           <li id="home"><a href="/">HOME</a></li>
           <li id="about"><a href="/about">ABOUT US</a></li>
           <li id="contact"><a href="/contact">CONTACT US</a></li>
+          <li id="contact" class="nav-item"><a href="/compose" class="nav-link  create-post">CREATE POST</a></li>
         </ul>
     </div>
   </nav>
